// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should render default slot correctly 1`] = `
<div
  role="button"
  class="mi-action-bar-icon"
  tabindex="0"
>
  <div class="mi-badge__wrapper mi-icon mi-icon-undefined mi-action-bar-icon__icon">
  </div>
  Content
</div>
`;

exports[`should render icon slot correctly 1`] = `
<div
  role="button"
  class="mi-action-bar-icon"
  tabindex="0"
>
  <div class="mi-badge__wrapper mi-action-bar-icon__icon">
    Custom Icon
  </div>
  Content
</div>
`;

exports[`should render icon slot with badge correctly 1`] = `
<div
  role="button"
  class="mi-action-bar-icon"
  tabindex="0"
>
  <div class="mi-badge__wrapper mi-action-bar-icon__icon">
    Custom Icon
    <div class="mi-badge mi-badge--top-right mi-badge--fixed">
      1
    </div>
  </div>
  Content
</div>
`;

exports[`should render icon slot with dot correctly 1`] = `
<div
  role="button"
  class="mi-action-bar-icon"
  tabindex="0"
>
  <div class="mi-badge__wrapper mi-action-bar-icon__icon">
    Custom Icon
    <div class="mi-badge mi-badge--top-right mi-badge--dot mi-badge--fixed">
    </div>
  </div>
  Content
</div>
`;

exports[`should render icon-prefix correctly 1`] = `
<div
  role="button"
  class="mi-action-bar-icon"
  tabindex="0"
>
  <div class="mi-badge__wrapper my-icon my-icon-success mi-action-bar-icon__icon">
  </div>
</div>
`;
